@@ -1,5 +1,10 @@
 2011-06-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/graph/viewAlone/spoon2D.c: Fix another problem with
+	r1557.
+
+2011-06-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/graph/viewAlone/spoonComp.c: Fix problem with
 	last commit.
 
